objects/DX_Format_Object__c.object
<CustomObject>
    <fields>
        <fullName>Global_Picklist_Value_Set__c</fullName>
        <description>Desc</description>
        <inlineHelpText>Help</inlineHelpText>
        <label>Global Picklist Value Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Value_Set1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Picklist_B__c</fullName>
        <label>Standard Picklist B</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Picklist__c</fullName>
        <description>Description</description>
        <inlineHelpText>Helptext</inlineHelpText>
        <label>Standard Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ValueA</fullName>
                </value>
                <value>
                    <fullName>ValueB</fullName>
                </value>
                <value>
                    <fullName>ValueC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DX_Format_Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NewListView</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Global_Picklist_Value_Set__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>NewListView</label>
    </listViews>
    <nameField>
        <label>DX_Format_Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DX_Format_Objects</pluralLabel>
    <recordTypes>
        <fullName>RTA</fullName>
        <active>true</active>
        <label>RTA</label>
    </recordTypes>
    <recordTypes>
        <fullName>RTB</fullName>
        <active>true</active>
        <description>RTB</description>
        <label>RTB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>SharingReasonChanged__c</fullName>
        <label>SharingReasonChangedLabell</label>
    </sharingReasons>
    <validationRules>
        <fullName>ValidationRuleA</fullName>
        <active>true</active>
        <description>Desription</description>
        <errorConditionFormula>Name = &apos;Test&apos;</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Do not name Test this record</errorMessage>
    </validationRules>
</CustomObject>